--- a/kernel-aarch64-fedora.config
+++ b/kernel-aarch64-fedora.config
@@ -1,3 +1,14 @@
+CONFIG_PCI_MESON=y
+CONFIG_DWMAC_MESON=y
+CONFIG_MDIO_BUS_MUX_MESON_G12A=y
+CONFIG_I2C_MESON=y
+CONFIG_PWM_MESON=y
+CONFIG_USB_DWC3_MESON_G12A=y
+CONFIG_MMC_MESON_GX=y
+CONFIG_MMC_MESON_MX_SDIO=y
+CONFIG_MESON_DDR_PMU=y
+CONFIG_RTW88_8822CS=m
+
 # arm64
 # CONFIG_60XX_WDT is not set
 CONFIG_64BIT=y
